Fixing font color in light and dark mode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
   --bg-input: #ffffff;
   --bg-header: #ffffff;
 
-  --text-primary: #000000;
+  --text-primary: #9caf88;
   --text-secondary: #555555;
   --text-muted: #888888;
   --text-placeholder: #aaaaaa;
